2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patches from Ryan Murray <rmurray@debian.org>

	* esd.c: (esd_connect_unix): prevent strncpy from writing a 
        non-NULL-terminated string.
	* esddsp.c: (dsp_init): same here.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* audio_alsa09.c: Call snd_pcm_hw_free() before 
        snd_pcm_close(). This closes the file descriptor to the sound 
        device even if the device is not physically present any more.
        This fixes the esound/hotplug deadlock when removing a 
        currently active sound device.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esdfilt.c: (main): add informative output to -double, similar 
          to that of -half.

2008-11-18  Josselin Mouette <joss@malsain.org>

	* esd-server.h: add missing sys/un.h header.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* proto.c: (esd_proto_stream_recorder): replace the 1 s sleeps, 
        which are here to work around a bug in the kernel, by 100 µs 
        ones, which will be enough.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esdfile.c: (esd_play_file): accept file formats supported by 
        libaudiofile.
	* configure.ac: require libaudiofile 0.2.3 which adds support 
        for them.

============================== 0.2.40 ===========================

2008-09-03  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Release 0.2.40

	* NEWS: updated

2008-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* esdlib.c (write_timeout): Check for the existence of POLLERR or
	POLLHUP first. If either is set, abort the write(). We can't
	assume that POLLOUT won't be set if a hang-up occurred.
	(write_timeout): Abort on all write() errors other than EINTR.

2008-07-29  Jeffrey Stedfast  <fejj@novell.com>

	* audio_oss.c: #include <errno.h>. Fixes bug #543239

============================== 0.2.39 ===========================
